Akeeba Data Compliance 2.0.3
================================================================================
~ Changes in Joomla 4.0.0-RC5 broke the date and time input fields. Now using native HTML 5 controls.
# [HIGH] The Privacy Policy article is not displayed in the data options page

Akeeba Data Compliance 2.0.2
================================================================================
~ Joomla changed the location of cacert.pem

Akeeba Data Compliance 2.0.1
================================================================================
~ Converted all tables to InnoDB for better performance
~ Updated Charts.js
# [HIGH] Cannot delete user or export settings from the frontend

Akeeba Data Compliance 2.0.0
================================================================================
+ Rewritten to use FOF 4.0
+ Renamed ViewTemplates to tmpl (Joomla 4 convention, with fallback code for Joomla 3)
+ Kills the redirection imposed by the Joomla privacy consent to avoid an infinite redirection loop
+ Yes/No options in the component and plugin options now work correctly under Joomla 4.0 beta 7 and later

Akeeba Data Compliance 1.2.5
================================================================================
+ Supports controller as an alias for view in Joomla 4
~ Now using common view templates from our FOF framework for consistency across our software

Akeeba Data Compliance 1.2.4
================================================================================
- Removed PHP 7.1 support
~ Add PHP 8.0 in the list of known PHP versions, recommend PHP 7.4 or later
# [HIGH] Joomla 4 beta 6 changed how sessions work, breaking everything
# [HIGH] Typo in installation SQL file would cause an error on first install

Akeeba Data Compliance 1.2.3
================================================================================
+ CLI tool to replay the audit log
+ Custom error pages when FEF is not installed or an unhandled PHP exception occurred